# bombcell

./: .gitattributes  .gitignore  .~lock.tabledata2.txt#  Bombcell.prj  CCGBz.m  README.md  README.md~  ampli_fit_prc_missJF.m  analyze_peak_trough_fix.py  bc_classifyStriatalCells.m  bc_classifyStriatalCells.m~  bc_classifyStriatum.m  bc_classifyStriatum.m~  bc_computeAllEphysProperties.m  bc_defineTimechunksToKeep.m  bc_extractRawWaveforms.m  bc_getRawAmplitude.m  bc_loadSavedMetrics.m  bc_numberSpikes.m  bc_pipeline_unitQualityGUI.m  bc_qualityMetricsPipeline_JF.m  bc_qualityMetrics_pipeline.asv  bc_qualityMetrics_pipeline.m  bc_qualityMetrics_pipeline.m~  bc_qualityMetrics_pipeline_ALC.m  bc_qualityMetrics_pipeline_DecompressedData.m  bc_qualityMetrics_pipeline_compressedPlayground.m  bc_runAllQualityMetrics.m  bc_troughsPeaks.m  bombcell.mltvx  bombcell.prj  check_peak_trough_results.py  classifyStriatum.m  cluster_bc_unitType.tsv  crameri.m  debug_direct.py  debug_duration_line.py  debug_duration_simple.py  debug_peak_detection.py  demos.xml  (+39 more)
pyBombCell/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_ccg_matlab_comparison.py
pyBombCell/Demos/: BC_demo copy.ipynb  BC_demo.ipynb  BC_demo_WIP.ipynb  BC_demo_detail.ipynb
pyBombCell/Demos/toy_data/: _bc_ephysParameters.parquet  cluster_frac_RPVs.tsv  cluster_spatial_decay_slope.tsv  cluster_wv_baseline_flatness.tsv  templates._bc_ephysProperties.parquet
pyBombCell/Demos/toy_data/bombcell/: .~lock.templates._bc_qMetrics.csv#  _bc_ephysParameters.parquet  _bc_parameters._bc_qMetrics.parquet  cluster_FractionRPVs.tsv  cluster_Lratio.tsv  cluster_RPV_use_tauR_est.tsv  cluster_bc_unitType.tsv  cluster_cumDriftEstimate.tsv  cluster_cumulative_drift_estimate.tsv  cluster_fractionRPVs (Case Conflict 2).tsv  cluster_fractionRPVs (Case Conflict 3).tsv  cluster_fractionRPVs (Case Conflict 6).tsv  cluster_fractionRPVs_estimatedTauR.tsv  cluster_fraction_RPVs.tsv  cluster_isolationDistance.tsv  cluster_isolation_dist.tsv  cluster_l_ratio.tsv  cluster_mainPeak_before_width.tsv  cluster_mainTrough_width.tsv  cluster_main_peak_to_trough_ratio.tsv  cluster_maxDriftEstimate.tsv  cluster_max_drift_estimate.tsv  cluster_nPeaks.tsv  cluster_nTroughs.tsv  cluster_n_peaks.tsv  cluster_n_troughs.tsv  cluster_peak1ToPeak2Ratio.tsv  cluster_peak1_to_peak2_ratio.tsv  cluster_peak_before_width.tsv  cluster_percent_missing_gaussian.tsv  cluster_percent_missing_symmetric.tsv  cluster_percentageSpikesMissing_gaussian.tsv  cluster_percentageSpikesMissing_symmetric.tsv  cluster_presenceRatio.tsv  cluster_presence_ratio.tsv  cluster_rawAmplitude.tsv  cluster_raw_amplitude.tsv  cluster_scndPeakToTroughRatio.tsv  cluster_scnd_peak_to_trough_ratio.tsv  cluster_signal_to_noise_ratio.tsv  (+21 more)
pyBombCell/Demos/toy_data/bombcell/for_GUI/: gui_data.pkl
pyBombCell/__pycache__/: quality_metrics.custom_mahal_loop-986.py311.1.nbc  quality_metrics.custom_mahal_loop-986.py311.2.nbc  quality_metrics.custom_mahal_loop-986.py311.nbi  quality_metrics.custom_mahal_loop-997.py311.1.nbc  quality_metrics.custom_mahal_loop-997.py311.2.nbc  quality_metrics.custom_mahal_loop-997.py311.nbi  quality_metrics.remove_duplicates-29.py311.1.nbc  quality_metrics.remove_duplicates-29.py311.nbi  quality_metrics.remove_duplicates-37.py311.1.nbc  quality_metrics.remove_duplicates-37.py311.nbi
pyBombCell/bombcell/: BC_demo copy.ipynb  PyIO.py  __init__.py  ccg_fast.py  ccg_heart.c  ccg_setup.py  classification_fix.py  default_parameters.py  ephys_properties.py  extract_raw_waveforms.py  gui_sandbox.py  helper_functions.py  load_ephys_data.py  loading_utils.py  manual_analysis.py  matlab_gui.py  plot_functions.py  quality_metrics.py  save_utils.py  simple_gui.py  unit_quality_gui.py
pyBombCell/bombcell/__pycache__/: quality_metrics.custom_mahal_loop-1007.py38.1.nbc  quality_metrics.custom_mahal_loop-1007.py38.2.nbc  quality_metrics.custom_mahal_loop-1007.py38.nbi  quality_metrics.custom_mahal_loop-1323.py38.1.nbc  quality_metrics.custom_mahal_loop-1323.py38.2.nbc  quality_metrics.custom_mahal_loop-1323.py38.nbi  quality_metrics.custom_mahal_loop-1324.py38.1.nbc  quality_metrics.custom_mahal_loop-1324.py38.2.nbc  quality_metrics.custom_mahal_loop-1324.py38.nbi  quality_metrics.custom_mahal_loop-1325.py38.1.nbc  quality_metrics.custom_mahal_loop-1325.py38.2.nbc  quality_metrics.custom_mahal_loop-1325.py38.nbi  quality_metrics.custom_mahal_loop-1356.py38.1.nbc  quality_metrics.custom_mahal_loop-1356.py38.2.nbc  quality_metrics.custom_mahal_loop-1356.py38.nbi  quality_metrics.remove_duplicates-38.py311.1.nbc  quality_metrics.remove_duplicates-38.py311.nbi  quality_metrics.remove_duplicates-38.py38.1.nbc  quality_metrics.remove_duplicates-38.py38.nbi  quality_metrics.remove_duplicates-39.py38.1.nbc  quality_metrics.remove_duplicates-39.py38.nbi
py_bombcell/: README.md  batch_bombcell.py  bombcell_batch.py  pyproject.toml  requirements.txt  test_figures_example.py
py_bombcell/.claude/: settings.local.json
py_bombcell/bombcell/: __init__.py  ccg_fast.py  classification.py  default_parameters.py  dscisi.py  ephys_properties.py  extract_raw_waveforms.py  helper_functions.py  loading_utils.py  manual_analysis.py  methods_text.py  plot_functions.py  plotting_utils.py  quality_metrics.py  save_utils.py  sliding_rp_violations.py  unit_quality_gui.py
py_bombcell/demos/: BC_demo copy.ipynb  BC_demo.ipynb  BC_demo_WIP.ipynb  BC_demo_methods_generation.ipynb  BC_demo_open_ephys.ipynb  BC_demo_other_recording_software.ipynb  BC_demo_spikeGLX.ipynb  BC_demo_spikeGLX_jf_test2.ipynb  BC_demo_toy_data.ipynb  BC_test.ipynb  bombcell_unitmatch_simple.ipynb  my_acgs.pkl  pl2_demo_3.ipynb
py_bombcell/demos/toy_data/: amplitudes.npy  cluster_RPV_window_index.tsv  cluster_SNR.tsv  cluster_bc_unitType.tsv  cluster_fractionRPVs_estimatedTauR.tsv  cluster_n_peaks.tsv  cluster_peak_1_to_peak_2.tsv  cluster_percentageSpikesMissing_gaussian.tsv  cluster_presence_ratio.tsv  cluster_waveformBaselineFlatness.tsv  pc_feature_ind.npy  spike_clusters.npy  spike_times.npy  templates.npy
(+806 files in other folders)
