[metadata]
name = bombcell
version = 0.31
description = Python port of BombCell. Automated quality control, curation and neuron classification of spike-sorted electrophysiology data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BombCell/bombcell
author = Julie Fabre, Sam Dodgson
author_email = julie.m.fabre@gmail.com
license = GPL-3.0
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	joblib
	scipy
	pandas
	numba >= 0.58.1
	matplotlib
	mtscomp
	tqdm
	pyarrow

[options.packages.find]
where = .

[egg_info]
tag_build = 
tag_date = 0

