[metadata]
name = bombcell
version = 0.31
description = Python port of BombCell. Automated quality control, curation and neuron classification of spike-sorted electrophysiology data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BombCell/bombcell
author = Julie Fabre, Sam Dodgson
author_email = julie.m.fabre@gmail.com
license = GPL-3.0
license_files = LICENSE
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires = 
	numpy>=1.19.0
	scipy>=1.7.0
	matplotlib>=3.3.0
	pandas>=1.3.0
	ipywidgets>=7.6.0
	joblib>=1.0.0
	tqdm>=4.50.0
	pyarrow>=5.0.0

[options.extras_require]
all = 
	mtscomp
	upsetplot
	numba>=0.58.1
plotting = 
	upsetplot
compression = 
	mtscomp
	numba>=0.58.1

[options.packages.find]
where = .

